# documentation

./: .gitignore  .gitmodules  404.html  README.md  benchmark  index.html  mkdocs.dev.yml  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.agents/skills/humanizer/: SKILL.md
.agents/skills/tdd/: SKILL.md
.github/workflows/: docs.yaml  pages.yaml
BioChatter/: index.html
BioChatter/api-docs/: index.html
BioChatter/api-docs/api-calling-base/: index.html
BioChatter/api-docs/api-calling-python/: index.html
BioChatter/api-docs/api-calling-web/: index.html
BioChatter/api-docs/kg/: index.html
BioChatter/api-docs/llm_connect/: index.html
BioChatter/api-docs/podcast/: index.html
BioChatter/api-docs/reflexion/: index.html
BioChatter/api-docs/vectorstore/: index.html
BioChatter/benchmark/developer/: index.html
BioChatter/benchmark/overview/: index.html
BioChatter/benchmark/results/: index.html
BioChatter/features/: index.html
BioChatter/features/api/: index.html
BioChatter/features/benchmark/: index.html
BioChatter/features/chat/: index.html
BioChatter/features/open-llm/: index.html
BioChatter/features/podcast/: index.html
BioChatter/features/rag/: index.html
BioChatter/features/reflexion-agent/: index.html
BioChatter/features/wasm/: index.html
BioChatter/scripts/__init__/: index.html
BioChatter/scripts/_plotting/: index.html
BioChatter/scripts/_preprocess/: index.html
BioChatter/scripts/_stats/: index.html
BioChatter/scripts/api_analysis/: index.html
BioChatter/scripts/hooks/: index.html
BioChatter/vignettes/: index.html
BioChatter/vignettes/kg/: index.html
BioCypher/: index.html
BioCypher/community/: index.html
BioCypher/installation/: index.html
BioCypher/reference/: index.html
biocypher_docs/: activity_stream.py
docs/: about.md  biogather.md  biotope.md  images  index.md  philosophy.md  project.md  sponsors.md
docs/community/: 2026-workshop.md  contribute-codebase.md  contribute-docs.md  contribute.md  index.md
docs/scripts/: counters.js  nav-drawer.js  source-metrics.js
overrides/: home.html
overrides/partials/: footer.html  header.html  source.html
search/: search_index.json
tests/: test_activity_stream.py
(+51 files in other folders)
